--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,52 @@
   width: 257px;
 }
 
+.candidates{
+  padding-bottom: 375px;
+  margin-bottom: 300px;
+}
+
+.pCheck {
+/*   padding-right: 50px; */
+  font-size:100%;
+  position: relative;
+  font-family: 'Lora', serif;
+ padding-top: 320px; 
+  padding-left:50px; 
+/*   margin-left: 70px; */
+  display: inline-block;
+}
+
+.submit{
+/*   position: absolute;
+  top:0; */
+  font-family: 'Lora', serif;
+/*   margin-left:950px; */
+/*   left:0; */
+/*   border-style: solid;
+  border-width: 10px; */
+}
+
 .imgDescription {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 0px;
+  bottom: 100px;
+  left: 0px;
+  right: 0px;
   font-size: 30px;
   color: white; 
   text-align: center;
   font-family: 'Lora', serif;
-  
-  top: 45%; 
+  top: 0%; 
+  bottom: 50%;
   /*width: 100%; */
 
   visibility: hidden;
   opacity: 0;
+}
+
+.imgWrap{
+     vertical-align: middle;
 }
 
 .imgWrap:hover .imgDescription {
@@ -67,17 +97,45 @@ h1{
   right: 0;
 }
 
-/* 
-#sanders{
-  margin-top: 315px;
-  margin-left: 350px;
-} */
+
+.cCheck div{
+/*   margin-top: 315px; */
+/*   margin-left: 50px; */
+  display: inline-block;
+/*   margin-left: 140px; */
+  padding-right: 50px;
+}
 
 img{
-  padding-top:170px;
+  padding-top: 30px;
+}
+
+/* .cCheck{
+  padding-right: 50px;
+  font-size:100%;
+  position: relative;
+  padding-bottom: 320px;
+  padding-left:50px;
+  margin-left: 30px;
+  margin-right: 30px;
+} */
+
+p#abortion {
+  display: none;
+}
+
+p#education{
+  display: none;
 }
 
 #s_name, #s_policy{
+  display: none;
+}
+
+h4{
+  display: none;
+}
+.modal-body div{
   display: none;
 }
 
