--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Lora:700);
+@import url(http://fonts.googleapis.com/css?family=Lora:400,700);
 
 td,th { 
   padding: 5px;
+  font-family: 'Lora', serif;
 }
 
 .imgWrap {
@@ -19,8 +20,8 @@ td,th {
   font-size:120%;
   position: relative;
   font-family: 'Lora', serif;
- padding-top: 420px; 
-  padding-left:530px; 
+ padding-top: 270px; 
+  padding-left:600px; 
   margin-left: 70px;
   display: inline-block;
   vertical-align: middle;
@@ -108,8 +109,8 @@ h1{
 /*   margin-left: 50px; */
   font-family: 'Lora', serif;
   display: inline-block;
-  margin-left: 45px;
-  padding-right: 50px;
+  margin-left: 50px;
+  padding-right: 60px;
 }
 
 img{
@@ -139,9 +140,12 @@ img{
 }
 
 h4{
+  font-family: 'Lora', serif;
+  font-weight: bold;
   display: none;
 }
 .modal-body div{
+ 
   display: none;
 }
 
@@ -149,6 +153,16 @@ footer{
   font-family: 'Lora', serif;
   font-size: 170%;
   text-align: center;
+}
+
+ul .dropdown-menu{
+  font-family: 'Lora', serif;
+  float: right;
+  top: 0px;
+}
+
+.modal-body{
+  font-family: 'Lora', serif;
 }
 
 /* //dropdown button */
